# roofline

./: README.md  pyproject.toml
src/roofline/: __init__.py  roofline.py
