[project]
name = "roofline"
version = "1.0"
authors = [
    { name="Michael Gilbert", email="gilbertm@mit.edu" },
]
description = "Draw a roofline model"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"